# aiwt

./: Cargo.toml  LICENSE  README.md  SPEC.md  config.example.toml
.github/workflows/: ci.yml  release.yml
src/: commands.rs  complete.rs  config.rs  error.rs  fzf.rs  git.rs  main.rs  template.rs  tmux.rs
tests/: cli.rs
